--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "ulthon",
         "admin"
     ],
-    "homepage": "http://ulthon_admin.ulthon.com/",
+    "homepage": "http://ulthon-admin.ulthon.com/",
     "license": "Apache-2.0",
     "authors": [
         {
@@ -23,7 +23,8 @@
         "topthink/think-orm": "2.0.*-dev",
         "topthink/think-view": "^1.0",
         "topthink/think-migration": "^3.0",
-        "topthink/think-helper": "^3.1"
+        "topthink/think-helper": "^3.1",
+        "topthink/think-captcha": "^3.0"
     },
     "require-dev": {
         "symfony/var-dumper": "^4.2"
