--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "topthink/think-view": "^1.0",
         "topthink/think-migration": "^3.0",
         "topthink/think-helper": "^3.1",
-        "topthink/think-captcha": "^3.0"
+        "topthink/think-captcha": "^3.0",
+        "topthink/think-multi-app": "^1.0"
     },
     "require-dev": {
         "symfony/var-dumper": "^4.2"
