--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,8 @@
     ],
     "require": {
         "php": ">=7.1.0",
-        "topthink/framework": "6.0.*-dev",
-        "topthink/think-orm": "2.0.*-dev",
+        "topthink/framework": "6.0.*",
+        "topthink/think-orm": "2.0.*",
         "topthink/think-view": "^1.0",
         "topthink/think-migration": "^3.0",
         "topthink/think-helper": "^3.1",
