增加初始化admin账号密码命令行;修改部分声明;增加表注释生成关联的功能;

--- a/.example.env
+++ b/.example.env
@@ -6,13 +6,13 @@ DEFAULT_TIMEZONE=Asia/Shanghai
 [DATABASE]
 TYPE=mysql
 HOSTNAME=host.docker.internal
-DATABASE=easyadmin
+DATABASE=ulthon
 USERNAME=root
 PASSWORD=root
 HOSTPORT=3306
 CHARSET=utf8
 DEBUG=true
-PREFIX=ea_
+PREFIX=ul_
 
 [LANG]
 default_lang=zh-cn
