--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
         "jianyan74/php-excel": "^1.0",
         "zhongshaofa/easy-admin": "^1.0.2",
         "ext-json": "*",
-        "zhongshaofa/thinkphp-log-trace": "^1.0"
+        "zhongshaofa/thinkphp-log-trace": "^1.0",
+        "guzzlehttp/guzzle": "^7.4"
     },
     "require-dev": {
         "symfony/var-dumper": "^4.2",
