--- a/composer.json
+++ b/composer.json
@@ -27,10 +27,10 @@
         "qcloud/cos-sdk-v5": "^2.0",
         "qiniu/php-sdk": "^7.2",
         "alibabacloud/client": "^1.5",
-        "jianyan74/php-excel": "^1.0",
         "zhongshaofa/easy-admin": "^1.0.2",
         "ext-json": "*",
-        "guzzlehttp/guzzle": "^7.4"
+        "guzzlehttp/guzzle": "^7.4",
+        "phpoffice/phpspreadsheet": "^1.22"
     },
     "require-dev": {
         "symfony/var-dumper": "^4.2",
