删除无用文件，修正部分细节；

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,15 @@
-/.idea
-/.vscode
+.idea
+.vscode
 *.log
 .env
 config/install/lock/install.lock
-/public/upload
-/public/docs
+public/upload
+public/docs
 public/conf
 public/WowOss.exe
 app/index/controller/Test.php
 composer.phar
 app/test/
-/vendor
-/runtime
+vendor
+runtime
 ul.db
