--- a/composer.json
+++ b/composer.json
@@ -23,15 +23,14 @@
         "topthink/think-multi-app": "^1.0",
         "topthink/think-view": "^1.0",
         "topthink/think-captcha": "^3.0",
-        "aliyuncs/oss-sdk-php": "^2.3",
         "qcloud/cos-sdk-v5": "^2.0",
-        "alibabacloud/client": "^1.5",
         "zhongshaofa/easy-admin": "^1.0.2",
         "ext-json": "*",
         "guzzlehttp/guzzle": "^7.4",
         "phpoffice/phpspreadsheet": "^1.22",
         "topthink/think-migration": "^3.0",
-        "overtrue/flysystem-qiniu": "*"
+        "overtrue/flysystem-qiniu": "*",
+        "xxtime/flysystem-aliyun-oss": "^1.5"
     },
     "require-dev": {
         "symfony/var-dumper": "^4.2",
