--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
         "phpoffice/phpspreadsheet": "^1.22",
         "topthink/think-migration": "^3.0",
         "overtrue/flysystem-qiniu": "*",
-        "xxtime/flysystem-aliyun-oss": "^1.5"
+        "xxtime/flysystem-aliyun-oss": "^1.5",
+        "chunpat/flysystem-tencent-cos": "^0.0.1"
     },
     "require-dev": {
         "symfony/var-dumper": "^4.2",
