--- a/composer.json
+++ b/composer.json
@@ -33,8 +33,7 @@
         "doctrine/annotations": "^1.13"
     },
     "require-dev": {
-        "symfony/var-dumper": "^4.2",
-        "eaglewu/swoole-ide-helper": "dev-master"
+        "symfony/var-dumper": "^4.2"
     },
     "autoload": {
         "psr-4": {
