完善代码编译

--- a/.gitignore
+++ b/.gitignore
@@ -4,16 +4,11 @@
 .env
 config/install/lock/install.lock
 public/upload
-public/docs
-public/conf
-public/WowOss.exe
-app/index/controller/Test.php
 composer.phar
 app/test/
 vendor
 runtime
 ul.db
 /app/tools/controller/Install.php
-/app/common/command/curd/migrate_output.php
-/dist
-/temp
+/build
+/composer.lock
