修改默认配置mysql字符集为utf8mb4

--- a/.example.env
+++ b/.example.env
@@ -11,7 +11,7 @@ DATABASE=ulthon
 USERNAME=root
 PASSWORD=root
 HOSTPORT=3306
-CHARSET=utf8
+CHARSET=utf8mb4
 DEBUG=true
 PREFIX=ul_
 FIELDS_CACHE=false
