--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
         "overtrue/flysystem-qiniu": "^3.0",
         "overtrue/flysystem-cos": "^5.0",
         "iidestiny/flysystem-oss": "^4.0",
-        "czproject/git-php": "^4.2"
+        "czproject/git-php": "^4.2",
+        "phpspec/php-diff": "^1.1"
     },
     "require-dev": {
         "symfony/var-dumper": "^4.2"
