调整更新的append的逻辑;为login增加trait扩展机制;发布新版本

--- a/composer.json
+++ b/composer.json
@@ -40,6 +40,7 @@
     "autoload": {
         "psr-4": {
             "app\\": "app",
+            "trait\\": "extend/trait",
             "Phinx\\": "extend/phinx"
         },
         "psr-0": {
