--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
         "iidestiny/flysystem-oss": "^4.0",
         "czproject/git-php": "^4.2",
         "localheinz/diff": "^1.1",
-        "topthink/think-template": "^3.0"
+        "psr/simple-cache": ">=1.0"
     },
     "require-dev": {
         "symfony/var-dumper": "^4.2"
