--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
         "psr/simple-cache": ">=1.0"
     },
     "require-dev": {
-        "symfony/var-dumper": "^4.2"
+        "symfony/var-dumper": "*"
     },
     "autoload": {
         "psr-4": {
